[gd_scene load_steps=2 format=3 uid="uid://bgokjio5rurre"]

[ext_resource type="Script" path="res://addons/gd_scatter/src/core/ui/UI.gd" id="1_7cyug"]

[node name="UI" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_7cyug" )
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}
brush_size_slider_path = NodePath("V/BrushSize/Slider")
mesh_instances_slider_path = NodePath("V/MeshInstances/Slider")
brush_hardness_slider_path = NodePath("V/BrushHardness/Slider")
add_mesh_button_path = NodePath("V/V/Button")
mesh_list_path = NodePath("V/V/S/MeshList")

[node name="V" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BrushSize" type="HBoxContainer" parent="V"]
offset_right = 1024.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="V/BrushSize"]
offset_right = 510.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="V/BrushSize/H"]
offset_right = 85.0
offset_bottom = 26.0
size_flags_horizontal = 0
text = "Brush Size "

[node name="Size" type="Label" parent="V/BrushSize/H"]
rect_min_size = Vector2(40, 0)
offset_left = 89.0
offset_right = 129.0
offset_bottom = 26.0
text = "1"

[node name="Slider" type="HSlider" parent="V/BrushSize"]
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 15.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
tick_count = 1
ticks_on_borders = true

[node name="MeshInstances" type="HBoxContainer" parent="V"]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 56.0

[node name="H" type="HBoxContainer" parent="V/MeshInstances"]
offset_right = 510.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="V/MeshInstances/H"]
offset_right = 120.0
offset_bottom = 26.0
text = "Mesh instances"

[node name="Instances" type="Label" parent="V/MeshInstances/H"]
rect_min_size = Vector2(40, 0)
offset_left = 124.0
offset_right = 164.0
offset_bottom = 26.0
text = "100"

[node name="Slider" type="HSlider" parent="V/MeshInstances"]
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 15.0
size_flags_horizontal = 3
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 10.0
tick_count = 1
ticks_on_borders = true

[node name="BrushHardness" type="HBoxContainer" parent="V"]
offset_top = 60.0
offset_right = 1024.0
offset_bottom = 86.0

[node name="H" type="HBoxContainer" parent="V/BrushHardness"]
offset_right = 510.0
offset_bottom = 26.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="V/BrushHardness/H"]
offset_right = 123.0
offset_bottom = 26.0
text = "Brush Hardness"

[node name="Hardness" type="Label" parent="V/BrushHardness/H"]
rect_min_size = Vector2(40, 0)
offset_left = 127.0
offset_right = 167.0
offset_bottom = 26.0
text = "1"

[node name="Slider" type="HSlider" parent="V/BrushHardness"]
offset_left = 514.0
offset_right = 1024.0
offset_bottom = 15.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 1
ticks_on_borders = true

[node name="V" type="VBoxContainer" parent="V"]
offset_top = 90.0
offset_right = 1024.0
offset_bottom = 189.0

[node name="S" type="ScrollContainer" parent="V/V"]
offset_right = 1024.0
offset_bottom = 64.0
vertical_scroll_mode = 0

[node name="MeshList" type="ItemList" parent="V/V/S"]
rect_min_size = Vector2(0, 64)
offset_right = 1024.0
offset_bottom = 64.0
size_flags_horizontal = 3
auto_height = true
max_columns = 5
same_column_width = true

[node name="Button" type="Button" parent="V/V"]
offset_top = 68.0
offset_right = 1024.0
offset_bottom = 99.0
text = "Add custom mesh"
